# video-editor

./: .env.example  .gitignore  API.md  BESTANDSAUFNAHME.md  PR-1-coding-agent-report.md  README.md  UNIFIED-CHAT-PLAN.md  config.yaml  custom_words.txt  ff_tools.zsh  main.py  openapi.json  pyproject.toml  repl_dmucs.py  requirements.txt  reset.sh  server.sh
.github/: copilot-instructions.md
.intern/: api-registry.json  sqlite-registry.json
docs/: HANDBUCH.md  data-storage-layout.md  editor_chat.md  error-handling-logging.md  job-render-pipeline.md  timeline_layers.md  timeline_v2.md  timing-ssot.md
editor-ui/: README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
editor-ui/src/: App.tsx  index.css  types.ts
favicon-pack/: README.txt
src/: __init__.py  cli.py
src/ai/: chat.py  database.py  routes.py
src/api/: karaoke_project.py  models.py  routes.py  tasks.py
src/db/: library.py  routes.py
src/export/: ass_template.py  ass_writer.py  karaoke_html.py  karaoke_tags.py  lrc_writer.py  srt_writer.py  themes.py  txt_writer.py  video_markers.py  vtt_writer.py
src/lyrics/: reports.py  (+1 more)
tests/: conftest.py  test_api_integration.py  test_beatgrid_guardrails.py  test_bugfixes.py  test_core.py  test_db_routes.py  test_editor_render.py  test_editor_routes.py  test_file_registry.py  test_fileexplorer.py  test_generation.py  test_karaoke_project.py  test_library.py  test_media_executor.py  test_memory.py  test_overlays.py  test_regression.py  test_security.py  test_timeline_v2.py  test_v31.py  test_word_timeline.py
(+68 files in other folders)
